Added teaching files and dagstuhl seminar

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
 <p>2020 POPL, Actris: Session-Type Based reasoning in Separation Logic <a href="./papers/actris_popl.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
+<p>2024, January 31, Dagstuhl Seminar [<a href="./talks/24-01-31_dagstuhl.v">Coq Demo</a>]</p>
 <p>2023, September 07, ICFP Conference [<a href="./talks/23-09-07_icfp.pdf">Slides</a>]</p>
-<p>2023, May 23, Aarhus University, Iris Workshop [<a href="./talks/23-05-23_iris_workshop.pdf">Slides</a>]</p>
+<p>2023, May 23, Iris Workshop [<a href="./talks/23-05-23_iris_workshop.pdf">Slides</a>]</p>
 <p>2023, March 03, Aarhus University, Iris Seminar [<a href="./talks/23-03-03_iris_seminar.pdf">Slides</a>]</p>
 <p>2022, October 24, Aarhus University, Seminar [<a href="./talks/22-10-24_aarhus.pdf">Slides</a>]</p>
-<p>2022, September 21, KU Leuven, Summer School on Security and Verification [<a href="./talks/22-09-21_leuven_summer_school.pdf">Slides</a>]</p>
 <p>2022, May 02, Iris Workshop [<a href="./talks/22-02-05_iris_workshop.pdf">Slides</a>]</p>
 <p>2021, November 22, Aarhus University, Seminar [<a href="./talks/21-11-22_aarhus.pdf">Slides</a>]</p>
 <p>2021, June 11, Ph.D. Defense [<a href="./talks/21-06-11_defense.pdf">Slides</a>]</p>
@@ -94,6 +94,10 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
 <p>2020, January 22, POPL Conference [<a href="./talks/20-01-22_popl.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=BDnbxBmwNyQ">Recording</a>]</p>
 <p>2019, October 28, Iris Workshop [<a href="./talks/19-10-28_iris_workshop.pdf">Slides</a>]</p>
 <p>2019, October 02, Harvard University, Seminar [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
+
+<h2>Selected Teaching</h2>
+<p>2024, January 15, POPL Conference, Iris/Actris Tutorial [<a href="./talks/24-01-15_popl_tutorial.pdf">Slides</a>]</p>
+<p>2022, September 21, KU Leuven, Summer School on Security and Verification [<a href="./talks/22-09-21_leuven_summer_school.pdf">Slides</a>]</p>
 
 <h2>Conference Board and Commitee Participation</h2>
 <h3>Research Article Evaluation (* External)</h3>
