Added Aarhus talk on MDSPs

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
 <p>2020 POPL, Actris: Session-Type Based reasoning in Separation Logic <a href="./papers/actris_popl.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
+<p>2024, March 18, Aarhus University, Seminar [<a href="./talks/24-03-18_aarhus.pdf">Slides</a>]</p>
 <p>2024, January 31, Dagstuhl Seminar [<a href="./talks/24-01-31_dagstuhl.v">Coq Demo</a>]</p>
 <p>2023, September 07, ICFP Conference [<a href="./talks/23-09-07_icfp.pdf">Slides</a>]</p>
 <p>2023, May 23, Iris Workshop [<a href="./talks/23-05-23_iris_workshop.pdf">Slides</a>]</p>
