Added Multris and Iris Workshop invited talk

--- a/index.html
+++ b/index.html
@@ -73,10 +73,15 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
 <p>2023 ICFP, Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols <a href="./papers/reliable_communication_icfp23.pdf">[pdf]</a></p>
 <p>2023 ICFP, Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl) <a href="./papers/miniactris_icfp23.pdf">[pdf]</a></p>
 <p>2022 LMCS, Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
-<p>2021 CPP, Machine-Checked Semantic Session Typing [Distinguished] <a href="./papers/semantic_session_typing_cpp.pdf">[pdf]</a></p>
+<p>2021 CPP, Machine-Checked Semantic Session Typing <font color="darkred">[Distinguished Paper Award]</font> <a href="./papers/semantic_session_typing_cpp.pdf">[pdf]</a></p>
 <p>2020 POPL, Actris: Session-Type Based reasoning in Separation Logic <a href="./papers/actris_popl.pdf">[pdf]</a></p>
 
+<h2>Manuscripts</h2>
+
+<p>Multris: Functional Verification of Multiparty Message Passing in Separation Logic <a href="./papers/multris_manuscript.pdf">[pdf]</a></p>
+
 <h2>Talks</h2>
+<p>2024, June 03, Iris Workshop <font color="darkred">[Invited talk]</font> [Upcoming]</p>
 <p>2024, March 18, Aarhus University, Seminar [<a href="./talks/24-03-18_aarhus.pdf">Slides</a>]</p>
 <p>2024, January 31, Dagstuhl Seminar [<a href="./talks/24-01-31_dagstuhl.v">Coq Demo</a>]</p>
 <p>2023, September 07, ICFP Conference [<a href="./talks/23-09-07_icfp.pdf">Slides</a>]</p>
