--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
 <p>Sessions and Separation <a href="./papers/thesis.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
-<p>2024, June 03, Iris Workshop <font color="darkred">[Invited talk]</font> [Upcoming]</p>
+<p>2024, June 03, Iris Workshop <font color="darkred">[Invited talk]</font> [<a href="./talks/24-06-04_iris_workshop.pdf">Slides</a>]</p>
 <p>2024, May 14, Uppsala University [<a href="./talks/24-05-14_uppsala.pdf">Slides</a>]</p>
 <p>2024, March 18, Aarhus University, Seminar [<a href="./talks/24-03-18_aarhus.pdf">Slides</a>]</p>
 <p>2024, January 31, Dagstuhl Seminar [<a href="./talks/24-01-31_dagstuhl.v">Coq Demo</a>]</p>
