Added fairneris manuscript

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
 
 <h2>Manuscripts</h2>
 
+<p>Verifying Liveness Properties of Distributed Systems via Trace Refinement in Higher-Order Concurrent Separation Logic <a href="./papers/fairneris_manuscript.pdf">[pdf]</a></p>
 <p>Multris: Functional Verification of Multiparty Message Passing in Separation Logic <a href="./papers/multris_manuscript.pdf">[pdf]</a></p>
 
 <h2>PhD Dissertation</h2>
