--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ h1 {text-align: center;}
 
 <h2>Publications</h2>
 
+<p>2024 OOPSLA, Multris: Functional Verification of Multiparty Message Passing in Separation Logic [Conditionally accepted] <a href="./papers/multris_manuscript.pdf">[pdf]</a></p>
 <p>2024 POPL, Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement <a href="./papers/2024_popl_trillium.pdf">[pdf]</a></p>
 <p>2024 POPL, Deadlock-Free Separation Logic: Linearity Yields Progress for
 Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris.pdf">[pdf]</a></p>
@@ -75,7 +76,6 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
 <h2>Manuscripts</h2>
 
 <p>Verifying Liveness Properties of Distributed Systems via Trace Refinement in Higher-Order Concurrent Separation Logic <a href="./papers/fairneris_manuscript.pdf">[pdf]</a></p>
-<p>Multris: Functional Verification of Multiparty Message Passing in Separation Logic <a href="./papers/multris_manuscript.pdf">[pdf]</a></p>
 
 <h2>PhD Dissertation</h2>
 
