Added oopsla paper, and bumped unemployment

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h1 {text-align: center;}
 <div>
 <img src="me.jpg" alt="me" style="width:250px;" align="right" hspace="45" vspace="0">
 <p>
-  I'm a reliable guy, currently acting at Aarhus University Denmark,
+  I'm a reliable guy, most recently acting at Aarhus University Denmark,
   serving a postdoc protocol.
   My interests revolve around certifying strong reliable guarantees about
   unreliable software via machine-checked mathematical verification;
@@ -63,7 +63,7 @@ h1 {text-align: center;}
 
 <h2>Publications</h2>
 
-<p>2024 OOPSLA, Multris: Functional Verification of Multiparty Message Passing in Separation Logic [Conditionally accepted] <a href="./papers/multris_manuscript.pdf">[pdf]</a></p>
+<p>2024 OOPSLA, Multris: Functional Verification of Multiparty Message Passing in Separation Logic<a href="./papers/2024_oopsla_multris_preprint.pdf">[pdf]</a></p>
 <p>2024 POPL, Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement <a href="./papers/2024_popl_trillium.pdf">[pdf]</a></p>
 <p>2024 POPL, Deadlock-Free Separation Logic: Linearity Yields Progress for
 Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris.pdf">[pdf]</a></p>
