--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h1 {text-align: center;}
 <div>
 <img src="me.jpg" alt="me" style="width:250px;" align="right" hspace="45" vspace="0">
 <p>
-  I'm a reliable guy, most recently acting at Aarhus University Denmark,
+  I'm a reliable guy, acting at the IT University of Copenhagen in Denmark,
   serving a postdoc protocol.
   My interests revolve around certifying strong reliable guarantees about
   unreliable software via machine-checked mathematical verification;
