Updated contact info etc

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ h1 {text-align: center;}
     <td> Affiliation: </td>
     <td width="25">&nbsp;</td>
     <td align="right">
-      <a href="https://cs.au.dk/research/logic-and-semantics">
-	Logics and Semantics, Aarhus University, Denmark</a>
+      <a href="https://pls.itu.dk/">
+	Programming, Logic, and Semantics, IT University of Copenhagen, Denmark</a>
     </td>
   </tr>
   </tbody></table>
@@ -44,7 +44,7 @@ h1 {text-align: center;}
 <div>
 <img src="me.jpg" alt="me" style="width:250px;" align="right" hspace="45" vspace="0">
 <p>
-  I'm a reliable guy, acting at the IT University of Copenhagen in Denmark,
+  I'm a reliable guy, currently acting at the IT University of Copenhagen in Denmark,
   serving a postdoc protocol.
   My interests revolve around certifying strong reliable guarantees about
   unreliable software via machine-checked mathematical verification;
@@ -82,6 +82,7 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
 <p>Sessions and Separation <a href="./papers/thesis.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
+<p>2024, December 3, IT University of Copenhagen, Seminar [<a href="./talks/24-06-04_iris_workshop.pdf">Slides</a>]</p>
 <p>2024, June 03, Iris Workshop <font color="darkred">[Invited talk]</font> [<a href="./talks/24-06-04_iris_workshop.pdf">Slides</a>]</p>
 <p>2024, May 14, Uppsala University [<a href="./talks/24-05-14_uppsala.pdf">Slides</a>]</p>
 <p>2024, March 18, Aarhus University, Seminar [<a href="./talks/24-03-18_aarhus.pdf">Slides</a>]</p>
@@ -131,17 +132,13 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
   <tbody>
     <tr>
       <td>E-mail:</td>
-      <td align="right">hinrichsen  at  cs.au.dk</td>
-    </tr>
-    <tr>
-      <td>Phone:</td>
-      <td align="right">+45 60 24 99 24 </td>
+      <td align="right">jkas  at  itu.dk</td>
     </tr>
     <tr>
       <td>Office:</td>
-      <td align="right">Åbogade 34</td>
+      <td align="right">Rued Langgaards Vej 7</td>
       <tr>
-      <td colspan="3" align="right">8200 Aarhus N, DK-Denmark</td>
+      <td colspan="3" align="right">2300 København S, DK-Denmark</td>
       </tr>
     </tr>
 </table>    
