Added AAU talk and POPL PC duty

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
 <p>Sessions and Separation <a href="./papers/thesis.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
+<p>2025, February 25, Aalborg University, Invited talk [<a href="./talks/25-02-25_aau.pdf">Slides</a>]</p>
 <p>2024, December 3, IT University of Copenhagen, Seminar [<a href="./talks/24-06-04_iris_workshop.pdf">Slides</a>]</p>
 <p>2024, June 03, Iris Workshop <font color="darkred">[Invited talk]</font> [<a href="./talks/24-06-04_iris_workshop.pdf">Slides</a>]</p>
 <p>2024, May 14, Uppsala University [<a href="./talks/24-05-14_uppsala.pdf">Slides</a>]</p>
@@ -107,7 +108,7 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
 
 <h2>Conference Board and Commitee Participation</h2>
 <h3>Research Article Evaluation (* External)</h3>
-  <p>ICE'25 · GandALF'24 · LICS'24* · FoSSaCS'24* · CPP'24* · POPL'24* · OOPSLA'22* · PLACES'22 · POPL'22*</p>
+  <p>POPL'25 · ICE'25 · GandALF'24 · LICS'24* · FoSSaCS'24* · CPP'24* · POPL'24* · OOPSLA'22* · PLACES'22 · POPL'22*</p>
 <h3>Artifact Evaluation</h3>
   <p>ESOP'23 · PLDI'22 · POPL'22 · ICFP'20</p>
 
