Updated to new Aalborg position

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ h1 {text-align: center;}
   </h1>
   <table border="0" cellspacing="0" style="width:100%">
   <tbody><tr>
-    <td>Postdoc</td>
+    <td>Assistant Professor</td>
     <td width="25">&nbsp;</td>
     <td align="right">
       <!-- <a href="cv.pdf">	CV </a> -->
@@ -31,8 +31,8 @@ h1 {text-align: center;}
     <td> Affiliation: </td>
     <td width="25">&nbsp;</td>
     <td align="right">
-      <a href="https://pls.itu.dk/">
-	Programming, Logic, and Semantics, IT University of Copenhagen, Denmark</a>
+      <a href="https://www.cs.aau.dk/research/deis-distributed-embedded-and-intelligent-systems/">
+	Distributed, Embedded and Intelligent Systems, Aalborg University, Denmark</a>
     </td>
   </tr>
   </tbody></table>
@@ -130,13 +130,13 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
   <tbody>
     <tr>
       <td>E-mail:</td>
-      <td align="right">jkas  at  itu.dk</td>
+      <td align="right">jkhi  at  cs.aau.dk</td>
     </tr>
     <tr>
       <td>Office:</td>
-      <td align="right">Rued Langgaards Vej 7</td>
+      <td align="right">A. C. Meyers Vænge 15</td>
       <tr>
-      <td colspan="3" align="right">2300 København S, DK-Denmark</td>
+      <td colspan="3" align="right"> 2450 København, DK-Denmark</td>
       </tr>
     </tr>
 </table>    
