Added link to Google Scholar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ h1 {text-align: center;}
     <td>Assistant Professor</td>
     <td width="25">&nbsp;</td>
     <td align="right">
+      <a href="https://scholar.google.com/citations?user=2lDw_vYAAAAJ&hl=en">
+	Google Scholar</a>
       <!-- <a href="cv.pdf">	CV </a> -->
     </td>
   </tr>
