Added Mixtris paper

--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@ th, td {
 
 <table style="width:100%">
   <tr>
+    <td>OOPSLA'26</td>
+    <td>
+      <a href="./papers/2026_oopsla_mixtris_preprint.pdf">
+	Mixtris: Mechanised Higher-Order Separation Logic for Mixed Choice Multiparty Message Passing [Preprint, camera ready est. March 2026]</a>
+      <br>
+      <u>Jonas Kastberg Hinrichsen</u>, Iwan Quémerais, Lars Birkedal <br>
+    </td>
+  </tr>
+  <tr>
     <td>OOPSLA'24</td>
     <td>
       <a href="./papers/2024_oopsla_multris.pdf">
