Added CPP paper, and changed to new section

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ th, td {
     <td> Affiliation: </td>
     <td width="25">&nbsp;</td>
     <td align="right">
-      <a href="https://www.cs.aau.dk/research/deis-distributed-embedded-and-intelligent-systems/">
-	Distributed, Embedded and Intelligent Systems, Aalborg University, Denmark</a>
+      <a href="https://www.cs.aau.dk/research">
+	Computer Science Copenhagen, Aalborg University, Denmark</a>
     </td>
   </tr>
   </tbody></table>
@@ -79,6 +79,15 @@ th, td {
 	Mixtris: Mechanised Higher-Order Separation Logic for Mixed Choice Multiparty Message Passing [Preprint, camera ready est. March 2026]</a>
       <br>
       <u>Jonas Kastberg Hinrichsen</u>, Iwan Quémerais, Lars Birkedal <br>
+    </td>
+  </tr>
+  <tr>
+    <td>CPP'26</td>
+    <td>
+      <a href="./papers/2026_cpp_modality.pdf">
+	Building Blocks for Step-Indexed Program Logics</a>
+      <br>
+      Thomas Somers, <u>Jonas Kastberg Hinrichsen</u>, Lennard Gäher, Robbert Krebbers<br>
     </td>
   </tr>
   <tr>
