Added paper numbers

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ th, td {
 
 <table style="width:100%">
   <tr>
-    <td>OOPSLA'26</td>
+    <td style="width:15%">[10] OOPSLA'26</td>
     <td>
       <a href="./papers/2026_oopsla_mixtris_preprint.pdf">
 	Mixtris: Mechanised Higher-Order Separation Logic for Mixed Choice Multiparty Message Passing [Preprint, camera ready est. March 2026]</a>
@@ -82,7 +82,7 @@ th, td {
     </td>
   </tr>
   <tr>
-    <td>CPP'26</td>
+    <td>[09] CPP'26</td>
     <td>
       <a href="./papers/2026_cpp_modality.pdf">
 	Building Blocks for Step-Indexed Program Logics</a>
@@ -91,7 +91,7 @@ th, td {
     </td>
   </tr>
   <tr>
-    <td>OOPSLA'24</td>
+    <td>[08] OOPSLA'24</td>
     <td>
       <a href="./papers/2024_oopsla_multris.pdf">
 	Multris: Functional Verification of Multiparty Message Passing in Separation Logic</a>
@@ -100,7 +100,7 @@ th, td {
     </td>
   </tr>
   <tr>
-    <td>POPL'24</td>
+    <td>[07] POPL'24</td>
     <td>
       <a href="./papers/2024_popl_trillium.pdf">
 	Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement</a>
@@ -109,7 +109,7 @@ th, td {
     </td>
   </tr>
   <tr>
-    <td>POPL'24</td>
+    <td>[06] POPL'24</td>
     <td>
       <a href="./papers/2024_popl_linear_actris.pdf">
 	Deadlock-Free Separation Logic: Linearity Yields Progress for
@@ -119,7 +119,7 @@ Dependent Higher-Order Message Passing</a>
     </td>
   </tr>
   <tr>
-    <td>ICFP'23</td>
+    <td>[05] ICFP'23</td>
     <td>
       <a href="./papers/reliable_communication_icfp23.pdf">
 	Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols</a>
@@ -128,7 +128,7 @@ Dependent Higher-Order Message Passing</a>
     </td>
   </tr>
   <tr>
-    <td>ICFP'23</td>
+    <td>[04] ICFP'23</td>
     <td>
       <a href="./papers/miniactris_icfp23.pdf">
 	Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl)</a>
@@ -137,7 +137,7 @@ Dependent Higher-Order Message Passing</a>
     </td>
   </tr>
   <tr>
-    <td>LMCS'22</td>
+    <td>[03] LMCS'22</td>
     <td>
       <a href="./papers/actris_lmcs.pdf">
 	Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic</a>
@@ -146,7 +146,7 @@ Dependent Higher-Order Message Passing</a>
     </td>
   </tr>
   <tr>
-    <td>CPP'21</td>
+    <td>[02] CPP'21</td>
     <td>
       <a href="./papers/semantic_session_typing_cpp.pdf">
 	Machine-Checked Semantic Session Typing <font color="darkred">[Distinguished Paper Award]</font></a>
@@ -155,7 +155,7 @@ Dependent Higher-Order Message Passing</a>
     </td>
   </tr>
   <tr>
-    <td>POPL'20</td>
+    <td>[01] POPL'20</td>
     <td>
       <a href="./papers/actris_popl.pdf">
 	Actris: Session-Type Based reasoning in Separation Logic
