--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <style>
 .content {
-  max-width: 880px;
+  max-width: 900px;
   margin: auto;
 }
 h1 {text-align: center;}
@@ -14,7 +14,7 @@ a {
   <!-- font-weight: bold; -->
 }
 th, td {
-  padding: 5px;
+  padding: 4px;
   vertical-align: top;
 }
 </style>
@@ -73,7 +73,8 @@ th, td {
 
 <table style="width:100%">
   <tr>
-    <td style="width:15%">[10] OOPSLA'26</td>
+    <td>[10]</td>
+    <td>OOPSLA'26</td>
     <td>
       <a href="./papers/2026_oopsla_mixtris_preprint.pdf">
 	Mixtris: Mechanised Higher-Order Separation Logic for Mixed Choice Multiparty Message Passing [Preprint, camera ready est. March 2026]</a>
@@ -82,7 +83,8 @@ th, td {
     </td>
   </tr>
   <tr>
-    <td>[09] CPP'26</td>
+    <td>[9]</td>
+    <td>CPP'26</td>
     <td>
       <a href="./papers/2026_cpp_modality.pdf">
 	Building Blocks for Step-Indexed Program Logics</a>
@@ -91,7 +93,8 @@ th, td {
     </td>
   </tr>
   <tr>
-    <td>[08] OOPSLA'24</td>
+    <td>[8]</td>
+    <td>OOPSLA'24</td>
     <td>
       <a href="./papers/2024_oopsla_multris.pdf">
 	Multris: Functional Verification of Multiparty Message Passing in Separation Logic</a>
@@ -100,7 +103,8 @@ th, td {
     </td>
   </tr>
   <tr>
-    <td>[07] POPL'24</td>
+    <td>[7]</td>
+    <td>POPL'24</td>
     <td>
       <a href="./papers/2024_popl_trillium.pdf">
 	Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement</a>
@@ -109,7 +113,8 @@ th, td {
     </td>
   </tr>
   <tr>
-    <td>[06] POPL'24</td>
+    <td>[6]</td>
+    <td>POPL'24</td>
     <td>
       <a href="./papers/2024_popl_linear_actris.pdf">
 	Deadlock-Free Separation Logic: Linearity Yields Progress for
@@ -119,7 +124,8 @@ Dependent Higher-Order Message Passing</a>
     </td>
   </tr>
   <tr>
-    <td>[05] ICFP'23</td>
+    <td>[5]</td>
+    <td>ICFP'23</td>
     <td>
       <a href="./papers/reliable_communication_icfp23.pdf">
 	Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols</a>
@@ -128,7 +134,8 @@ Dependent Higher-Order Message Passing</a>
     </td>
   </tr>
   <tr>
-    <td>[04] ICFP'23</td>
+    <td>[4]</td>
+    <td>ICFP'23</td>
     <td>
       <a href="./papers/miniactris_icfp23.pdf">
 	Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl)</a>
@@ -137,7 +144,8 @@ Dependent Higher-Order Message Passing</a>
     </td>
   </tr>
   <tr>
-    <td>[03] LMCS'22</td>
+    <td>[3]</td>
+    <td>LMCS'22</td>
     <td>
       <a href="./papers/actris_lmcs.pdf">
 	Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic</a>
@@ -146,7 +154,8 @@ Dependent Higher-Order Message Passing</a>
     </td>
   </tr>
   <tr>
-    <td>[02] CPP'21</td>
+    <td>[2]</td>
+    <td>CPP'21</td>
     <td>
       <a href="./papers/semantic_session_typing_cpp.pdf">
 	Machine-Checked Semantic Session Typing <font color="darkred">[Distinguished Paper Award]</font></a>
@@ -155,7 +164,8 @@ Dependent Higher-Order Message Passing</a>
     </td>
   </tr>
   <tr>
-    <td>[01] POPL'20</td>
+    <td>[1]</td>
+    <td>POPL'20</td>
     <td>
       <a href="./papers/actris_popl.pdf">
 	Actris: Session-Type Based reasoning in Separation Logic
