--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <style>
 .content {
-  max-width: 900px;
+  max-width: 1200px;
   margin: auto;
 }
 h1 {text-align: center;}
@@ -73,102 +73,102 @@ th, td {
 
 <table style="width:100%">
   <tr>
-    <td>[10]</td>
-    <td>OOPSLA'26</td>
+    <td><b>[10]</b></td>
+    <td><b>OOPSLA'26</b></td>
     <td>
       <a href="./papers/2026_oopsla_mixtris_preprint.pdf">
-	Mixtris: Mechanised Higher-Order Separation Logic for Mixed Choice Multiparty Message Passing [Preprint, camera ready est. March 2026]</a>
+	<b>Mixtris: Mechanised Higher-Order Separation Logic for Mixed Choice Multiparty Message Passing [Preprint]</b></a>
       <br>
       <u>Jonas Kastberg Hinrichsen</u>, Iwan Quémerais, Lars Birkedal <br>
     </td>
   </tr>
   <tr>
-    <td>[9]</td>
-    <td>CPP'26</td>
+    <td><b>[9]</b></td>
+    <td><b>CPP'26</b></td>
     <td>
       <a href="./papers/2026_cpp_modality.pdf">
-	Building Blocks for Step-Indexed Program Logics</a>
+	<b>Building Blocks for Step-Indexed Program Logics</b></a>
       <br>
       Thomas Somers, <u>Jonas Kastberg Hinrichsen</u>, Lennard Gäher, Robbert Krebbers<br>
     </td>
   </tr>
   <tr>
-    <td>[8]</td>
-    <td>OOPSLA'24</td>
+    <td><b>[8]</b></td>
+    <td><b>OOPSLA'24</b></td>
     <td>
       <a href="./papers/2024_oopsla_multris.pdf">
-	Multris: Functional Verification of Multiparty Message Passing in Separation Logic</a>
+	<b>Multris: Functional Verification of Multiparty Message Passing in Separation Logic</b></a>
       <br>
       <u>Jonas Kastberg Hinrichsen</u>, Jules Jacobs, Robbert Krebbers <br>
     </td>
   </tr>
   <tr>
-    <td>[7]</td>
-    <td>POPL'24</td>
+    <td><b>[7]</b></td>
+    <td><b>POPL'24</b></td>
     <td>
       <a href="./papers/2024_popl_trillium.pdf">
-	Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement</a>
+	<b>Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement</b></a>
       <br>
       Amin Timany, Simon Oddershede Gregersen, Leo Stefanesco, <u>Jonas Kastberg Hinrichsen</u>, Leon Gondelman, Abel Nieto, Lars Birkedal <br>
     </td>
   </tr>
   <tr>
-    <td>[6]</td>
-    <td>POPL'24</td>
+    <td><b>[6]</b></td>
+    <td><b>POPL'24</b></td>
     <td>
       <a href="./papers/2024_popl_linear_actris.pdf">
-	Deadlock-Free Separation Logic: Linearity Yields Progress for
-Dependent Higher-Order Message Passing</a>
+	<b>Deadlock-Free Separation Logic: Linearity Yields Progress for
+Dependent Higher-Order Message Passing</b></a>
       <br>
       Jules Jacobs, <u>Jonas Kastberg Hinrichsen</u>, Robbert Krebbers <br>
     </td>
   </tr>
   <tr>
-    <td>[5]</td>
-    <td>ICFP'23</td>
+    <td><b>[5]</b></td>
+    <td><b>ICFP'23</b></td>
     <td>
       <a href="./papers/reliable_communication_icfp23.pdf">
-	Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols</a>
+	<b>Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols</b></a>
       <br>
       Leon Gondelman, <u>Jonas Kastberg Hinrichsen</u>, Mario Pereira, Amin Timany, Lars Birkedal </br>
     </td>
   </tr>
   <tr>
-    <td>[4]</td>
-    <td>ICFP'23</td>
+    <td><b>[4]</b></td>
+    <td><b>ICFP'23</b></td>
     <td>
       <a href="./papers/miniactris_icfp23.pdf">
-	Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl)</a>
+	<b>Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl)</b></a>
       <br>
       Jules Jacobs, <u>Jonas Kastberg Hinrichsen</u>, Robbert Krebbers <br>
     </td>
   </tr>
   <tr>
-    <td>[3]</td>
-    <td>LMCS'22</td>
+    <td><b>[3]</b></td>
+    <td><b>LMCS'22</b></td>
     <td>
       <a href="./papers/actris_lmcs.pdf">
-	Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic</a>
+	<b>Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic</b></a>
       <br>
       <u>Jonas Kastberg Hinrichsen</u>, Jesper Bengtson, Robbert Krebbers <br>
     </td>
   </tr>
   <tr>
-    <td>[2]</td>
-    <td>CPP'21</td>
+    <td><b>[2]</b></td>
+    <td><b>CPP'21</b></td>
     <td>
       <a href="./papers/semantic_session_typing_cpp.pdf">
-	Machine-Checked Semantic Session Typing <font color="darkred">[Distinguished Paper Award]</font></a>
+	<b>Machine-Checked Semantic Session Typing <font color="darkred">[Distinguished Paper Award]</b></font></a>
       <br>
       <u>Jonas Kastberg Hinrichsen</u>, Daniel Louwrink, Robbert Krebbers, Jesper Bengtson <br>
     </td>
   </tr>
   <tr>
-    <td>[1]</td>
-    <td>POPL'20</td>
+    <td><b>[1]</td>
+    <td><b>POPL'20</td>
     <td>
       <a href="./papers/actris_popl.pdf">
-	Actris: Session-Type Based reasoning in Separation Logic
+	<b>Actris: Session-Type Based reasoning in Separation Logic</b>
       </a>
       <br>
       <u>Jonas Kastberg Hinrichsen</u>, Jesper Bengtson, Robbert Krebbers <br>
@@ -210,8 +210,10 @@ Dependent Higher-Order Message Passing</a>
 <p>2022, September 21, KU Leuven, Summer School on Security and Verification [<a href="./talks/22-09-21_leuven_summer_school.pdf">Slides</a>]</p>
 
 <h2>Conference Board and Commitee Participation</h2>
+<!-- <h3>Research Article Evaluation</h3> -->
+<!--   <p>FORTE'26 · POPL'26 · ICE'25 · GandALF'24 · PLACES'22</p> -->
 <h3>Research Article Evaluation (* External)</h3>
-  <p>POPL'26 · ICE'25 · GandALF'24 · LICS'24* · FoSSaCS'24* · CPP'24* · POPL'24* · OOPSLA'22* · PLACES'22 · POPL'22*</p>
+  <p>FORTE'26 · POPL'26 · ICE'25 · GandALF'24 · LICS'24* · FoSSaCS'24* · CPP'24* · POPL'24* · OOPSLA'22* · PLACES'22 · POPL'22*</p>
 <h3>Artifact Evaluation</h3>
   <p>ESOP'23 · PLDI'22 · POPL'22 · ICFP'20</p>
 
