Clean up, and updated Bio

--- a/index.html
+++ b/index.html
@@ -55,17 +55,23 @@ th, td {
 <div>
 <img src="me.jpg" alt="me" style="width:250px;" align="right" hspace="45" vspace="0">
 <p>
-  My interests revolve around certifying strong reliable guarantees about
-  unreliable software via machine-checked mathematical verification;
-  thus far focusing on message-passing communication and distributed
-  systems.
-  I come from an applied background, having a software development degree,
+  Hi, I'm Jonas.
+  I like robustness and precise specifications.
+  As a result, my research interests revolve around developing formal systems
+  for specifying and verifying software.
+  I primarily focus on concurrency in the setting of message-passing communication and distributed systems.  
+<!-- certifying strong reliable guarantees about -->
+<!--   unreliable software via machine-checked mathematical verification; -->
+<!--   thus far focusing on message-passing communication and distributed -->
+<!--   systems. -->
+  I spend most of my time working with interactive theorem provers, such as Rocq,
+  where formal specifications and proofs can be programmed and machine-checked.
+  I come from an applied background, having a software development undergrad,
   which skews my interests in the direction of the more pragmatically applicable.
   My vision is to bridge the gap between industry and academia, through research
   outputs that are widely accessible, achieved through modularity and abstraction.
-  My primary research contribution thus far---the <a href="https://iris-project.org/actris/">Actris</a> logical
-  framework---is a venture about certifying strong reliability
-  for complicated message-passing systems via high-level specification and proof patterns.
+  My key research contribution thus far---the <a href="https://iris-project.org/actris/">Actris</a> logical
+  framework---is a venture about verifying robust guarantees about complex message-passing systems via high-level specification and proof patterns.
 </p>
 </div>
 
@@ -206,6 +212,7 @@ Dependent Higher-Order Message Passing</b></a>
 <p>2019, October 02, Harvard University, Seminar [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
 
 <h2>Selected Teaching</h2>
+
 <p>2024, January 15, POPL Conference, Iris/Actris Tutorial [<a href="./talks/24-01-15_popl_tutorial.pdf">Slides</a>]</p>
 <p>2022, September 21, KU Leuven, Summer School on Security and Verification [<a href="./talks/22-09-21_leuven_summer_school.pdf">Slides</a>]</p>
 
@@ -217,17 +224,18 @@ Dependent Higher-Order Message Passing</b></a>
 <h3>Artifact Evaluation</h3>
   <p>ESOP'23 · PLDI'22 · POPL'22 · ICFP'20</p>
 
-<h2>Teaching Activities</h2>
-  <p>Tutorial Responsible, Verified Message-Passing Concurrency in Iris: Separation Logic Meets Session Types, POPL′24 TutorialFest</p>
-  <p>Presenter - Summer School on Security Testing and Verification, KU Leuven, September 2022</p>
-  <p>Course Instructor - Program Logics, Aarhus University, Fall 2022</p>
-  <p>Course Instructor - Program Logics, Aarhus University, Fall 2021</p>
-  <p>Course Instructor - Advanced Programming, IT University of Copenhagen, Fall 2018</p>
-  <p>Course Instructor - Programming Language Concepts and Implementation, IT University of Copenhagen, Spring 2018</p>
-  <p>Teaching Assistant - Intelligent Systems Programming, IT University of Copenhagen, Spring 2016</p>
-  <p>Teaching Assistant - Operative Systems and C, IT University of Copenhagen, Fall 2015</p>
+<!-- <h2>Teaching Activities</h2> -->
+<!--   <p>Group Supervision - Aalborg University, Fall 2025</p> -->
+<!--   <p>Tutorial Responsible - Verified Message-Passing Concurrency in Iris: Separation Logic Meets Session Types, POPL′24 TutorialFest</p> -->
+<!--   <p>Presenter - Summer School on Security Testing and Verification, KU Leuven, September 2022</p> -->
+<!--   <p>Course Instructor - Program Logics, Aarhus University, Fall 2022</p> -->
+<!--   <p>Course Instructor - Program Logics, Aarhus University, Fall 2021</p> -->
+<!--   <p>Course Instructor - Advanced Programming, IT University of Copenhagen, Fall 2018</p> -->
+<!--   <p>Course Instructor - Programming Language Concepts and Implementation, IT University of Copenhagen, Spring 2018</p> -->
+<!--   <p>Teaching Assistant - Intelligent Systems Programming, IT University of Copenhagen, Spring 2016</p> -->
+<!--   <p>Teaching Assistant - Operative Systems and C, IT University of Copenhagen, Fall 2015</p> -->
 
-<h2>Industry Activities</h2>
+<h2>Selected Industry Activities</h2>
   <p>Formal Methods Developer at Bedrock Systems, Inc., Fall 2019</p>
 
 <h2> Contact </h2>
@@ -235,7 +243,7 @@ Dependent Higher-Order Message Passing</b></a>
   <tbody>
     <tr>
       <td>E-mail:</td>
-      <td align="right">jkhi  at  cs.aau.dk</td>
+      <td align="right">jkhi  at  cs dot aau dot dk</td>
     </tr>
     <tr>
       <td>Office:</td>
